# ci-cd-demo

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
tests/: test_main.py
